--- a/1.1/1.1 Create the document structure.html
+++ b/1.1/1.1 Create the document structure.html
@@ -54,7 +54,7 @@
 
         <!-- figure: Marcação semântica HTML5. Define o conteúdo que contém uma figura, como uma imagem, gráfico ou imagem -->
         <figure>
-            <img src="orange.jpg" style="width:50px; height:50px;" />
+            <img src="https://img.icons8.com/cute-clipart/2x/orange.png" style="width:50px; height:50px;" />
             <!-- figcaption: Marcação semântica HTML5. Define a legenda de um elemento de figura -->
             <figcaption>Fig 1: A really juicy orange.</figcaption>
         </figure>
