--- a/1.2/1.2 HTML source to work with the DOM.html
+++ b/1.2/1.2 HTML source to work with the DOM.html
@@ -122,7 +122,8 @@
     </div>
 
     <video controls poster="https://upload.wikimedia.org/wikipedia/commons/c/c9/Moon.jpg" height="400" width="600" loop>
-        <source src="https://vimeo.com/286236201" type="video/mp4" />
+        <source src="http://techslides.com/demos/sample-videos/small.mp4" type="video/mp4" />
+        <source src="http://techslides.com/demos/sample-videos/small.ogv" type="video/ogg" />
         <object>
             <p>Video is not supported by this browser.</p>
         </object>
@@ -132,24 +133,25 @@
         <tr>
             <td>
                 <video height="400" width="600" id="sampleVideo">
-                    <source src="https://vimeo.com/286236201" type="audio/mp4" />
+                    <source src="http://techslides.com/demos/sample-videos/small.mp4" type="audio/mp4" />
                 </video>
             </td>
             <td>
-                <img id="backButton" src="https://img.pngio.com/backward-fast-media-icon-download-free-icons-backwards-png-256_256.png" onclick="back();" /><br />
-                <img id="playButton" src="https://image.flaticon.com/icons/png/128/148/148736.png" onclick="play();" /><br />
-                <img id="PauseButton" src="https://cdn4.iconfinder.com/data/icons/ionicons/512/icon-pause-128.png" onclick="pause();" /><br />
+                <img id="backButton"
+                    src="https://img.pngio.com/backward-fast-media-icon-download-free-icons-backwards-png-256_256.png"
+                    onclick="back();" /><br />
+                <img id="playButton" src="https://image.flaticon.com/icons/png/128/148/148736.png"
+                    onclick="play();" /><br />
+                <img id="PauseButton" src="https://cdn4.iconfinder.com/data/icons/ionicons/512/icon-pause-128.png"
+                    onclick="pause();" /><br />
             </td>
         </tr>
     </table>
 
     <audio controls>
-        <source src=""/>
+        <source src="http://www.hochmuth.com/mp3/Haydn_Cello_Concerto_D-1.mp3" type="audio/mp3" />
+        <p>Your browser does not support HTML5 audio.</p>
     </audio>
 </body>
 
 </html>
-
-Objective 1.2: Write code that interacts with UI controls
-Adding or modifying HTML elemens
-Implementing media controls
